--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<h1>Inner Touch Tai Chi</h1>
+						<p>De Chinese sport Tai Chi is een fysieke en mentale training, voor gezondheid, zelfverdediging en zelfontwikkeling.
+							‘Tai Chi is meditatie in beweging’
+							Ontspannen de dag beginnen, onderbreken of eindigen.
+							Heb jij al eens overwooge.... Tai Chi les bij Judith van Drooge.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -30,21 +31,21 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Inner Touch</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="generic.html">Informatie</a></li>
+							<li><a href="elements.html">Workshops</a></li>
+							<li><a href="elements.html">Beeld</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -54,16 +55,15 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">April 25, 2023</span>
+									<h2>Tai Chi in de lente, doe mee in de maanden mei en juni 2023.</h2>
+									<p>Wil je eerst een proefles doen om kennis te maken en de sfeer te proeven, 
+										voel je van harte welkom. Er wordt Tai Chi les gegeven door Mirke de Kruijf in Zwolle en Steenwijk. 
+										Chi Kung lessen in Zwolle worden gegeven door Raquel Jesus geven.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="#" class="button large">Contact</a></li>
 								</ul>
 							</article>
 
@@ -71,93 +71,61 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">April 24, 2023</span>
+										<h2>Take a moment in time... </h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p> ... and spend it connecting with yourself.
+										Kom met ons in de flow, a wave of life, the Tai Chi wave.
+										Start nu! Iedereen is welkom! Tijd voor ontspanning. Tijd voor jezelf.
+										Tai Chi & Chi Kung lessen worden gegeven door wereldkampioen en rijkserkende leraren (NOC*NSF).
+										Buitenlessen, online lessen, workshops, bedrijfstrainingen, privélessen op afspraak.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Contact</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">April 22, 2023</span>
+										<h2>De Chinese sport Tai Chi</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>... is een fysieke en mentale training, voor gezondheid, zelfverdediging en zelfontwikkeling.
+										‘Tai Chi is meditatie in beweging’
+										Ontspannen de dag beginnen, onderbreken of eindigen.
+										Heb jij al eens overwooge.... Tai Chi les bij Judith van Drooge.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Contact</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">April 18, 2023</span>
+										<h2>Maak kennis met Tai Chi</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Een oosterse aanpak van mindfulness en zelfverdediging.
+										Inner Touch Tai Chi betekent letterlijk: De innerlijke aanraking van het hoogst haalbare, het grote ultieme. Tai Chi lessen efficiënt en effectief. Gebalanceerd en fit voor elke uitdaging in het leven, op alle vlakken. Veilig voelen in je balans en het verhogen van je uithoudingsvermogen. Lekker bezig zijn terwijl je aan je gezondheid werkt en het zelfherstellend vermogen, je immuunsysteem, up to date houden.  
+										
+										Draag los zittende kleding en platte schoenen, zodat je vrij kan bewegen. Kleed je warm aan, je kunt altijd wat uittrekken, en neem wat te drinken mee.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Contact</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date">April 14, 2023</span>
+										<h2>Online Only</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Livestream lessen meedoen via Zoom.
+										* ONLINE CHI KUNG FLOW, Monday 24 April. 22 May.
+										From 7:30 pm until 9:30 pm (CET).</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Contact</a></li>
 									</ul>
 								</article>
 							</section>
-
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
-
 					</div>
 
 				<!-- Footer -->
