Add scrolly to the button, they now navigate to the contact region.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Inner Touch</a>
+						<a href="#footer" class="logo scrolly scrolly">Inner Touch</a>
 					</header>
 
 				<!-- Nav -->
@@ -43,9 +43,9 @@
 							<li><a href="elements.html">Beeld</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#footer" class="icon scrolly brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#footer" class="icon scrolly brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#footer" class="icon scrolly brands fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 					</nav>
 
@@ -61,9 +61,9 @@
 										voel je van harte welkom. Er wordt Tai Chi les gegeven door Mirke de Kruijf in Zwolle en Steenwijk. 
 										Chi Kung lessen in Zwolle worden gegeven door Raquel Jesus geven.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#footer" class="image scrolly main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Contact</a></li>
+									<li><a href="#footer" class="button scrolly large">Contact</a></li>
 								</ul>
 							</article>
 
@@ -74,14 +74,14 @@
 										<span class="date">April 24, 2023</span>
 										<h2>Take a moment in time... </h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#footer" class="image scrolly fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p> ... and spend it connecting with yourself.
 										Kom met ons in de flow, a wave of life, the Tai Chi wave.
 										Start nu! Iedereen is welkom! Tijd voor ontspanning. Tijd voor jezelf.
 										Tai Chi & Chi Kung lessen worden gegeven door wereldkampioen en rijkserkende leraren (NOC*NSF).
 										Buitenlessen, online lessen, workshops, bedrijfstrainingen, privélessen op afspraak.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Contact</a></li>
+										<li><a href="#footer" class="button scrolly">Contact</a></li>
 									</ul>
 								</article>
 								<article>
@@ -89,13 +89,13 @@
 										<span class="date">April 22, 2023</span>
 										<h2>De Chinese sport Tai Chi</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#footer" class="image scrolly fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>... is een fysieke en mentale training, voor gezondheid, zelfverdediging en zelfontwikkeling.
 										‘Tai Chi is meditatie in beweging’
 										Ontspannen de dag beginnen, onderbreken of eindigen.
 										Heb jij al eens overwooge.... Tai Chi les bij Judith van Drooge.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Contact</a></li>
+										<li><a href="#footer" class="button scrolly">Contact</a></li>
 									</ul>
 								</article>
 								<article>
@@ -103,13 +103,13 @@
 										<span class="date">April 18, 2023</span>
 										<h2>Maak kennis met Tai Chi</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#footer" class="image scrolly fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Een oosterse aanpak van mindfulness en zelfverdediging.
 										Inner Touch Tai Chi betekent letterlijk: De innerlijke aanraking van het hoogst haalbare, het grote ultieme. Tai Chi lessen efficiënt en effectief. Gebalanceerd en fit voor elke uitdaging in het leven, op alle vlakken. Veilig voelen in je balans en het verhogen van je uithoudingsvermogen. Lekker bezig zijn terwijl je aan je gezondheid werkt en het zelfherstellend vermogen, je immuunsysteem, up to date houden.  
 										
 										Draag los zittende kleding en platte schoenen, zodat je vrij kan bewegen. Kleed je warm aan, je kunt altijd wat uittrekken, en neem wat te drinken mee.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Contact</a></li>
+										<li><a href="#footer" class="button scrolly">Contact</a></li>
 									</ul>
 								</article>
 								<article>
@@ -117,12 +117,12 @@
 										<span class="date">April 14, 2023</span>
 										<h2>Online Only</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="#footer" class="image scrolly fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>Livestream lessen meedoen via Zoom.
 										* ONLINE CHI KUNG FLOW, Monday 24 April. 22 May.
 										From 7:30 pm until 9:30 pm (CET).</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Contact</a></li>
+										<li><a href="#footer" class="button scrolly">Contact</a></li>
 									</ul>
 								</article>
 							</section>
@@ -159,19 +159,19 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#footer">(000) 000-0000</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#footer">info@untitled.tld</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#footer" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#footer" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="#footer" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#footer" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
