--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
-
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Inner Touch Tai Chi</h1>
@@ -28,12 +26,10 @@
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
-
 				<!-- Header -->
 					<header id="header">
 						<a href="#footer" class="logo scrolly scrolly">Inner Touch</a>
 					</header>
-
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
@@ -48,10 +44,8 @@
 							<li><a href="#footer" class="icon scrolly brands fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 					</nav>
-
 				<!-- Main -->
 					<div id="main">
-
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
@@ -61,12 +55,11 @@
 										voel je van harte welkom. Er wordt Tai Chi les gegeven door Mirke de Kruijf in Zwolle en Steenwijk. 
 										Chi Kung lessen in Zwolle worden gegeven door Raquel Jesus geven.</p>
 								</header>
-								<a href="#footer" class="image scrolly main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#footer" class="image scrolly main"><img src="images/firstCardCropedMore.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#footer" class="button scrolly large">Contact</a></li>
 								</ul>
 							</article>
-
 						<!-- Posts -->
 							<section class="posts">
 								<article>
@@ -127,31 +120,9 @@
 								</article>
 							</section>
 					</div>
-
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
+						<section class="contact">
 							<section class="alt">
 								<h3>Address</h3>
 								<p>1234 Somewhere Road #87257<br />
@@ -179,9 +150,8 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Judith van Drooge</li></ul>
 					</div>
-
 			</div>
 
 		<!-- Scripts -->
