Added a privacy policy page to the site.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 							<li><a href="generic.html">Informatie</a></li>
 							<li><a href="elements.html">Workshops</a></li>
 							<li><a href="elements.html">Beeld</a></li>
+							<li><a href="privacy.html">Privacy Policy</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#footer" class="icon scrolly brands fa-twitter"><span class="label">Twitter</span></a></li>
